--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-react-text-editor",
-  "version": "1.0.0",
+  "version": "1.3.0",
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -12,15 +12,15 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@lexical/code": "^0.17.0",
-    "@lexical/html": "^0.17.0",
-    "@lexical/list": "^0.17.0",
+    "@lexical/code": "^0.17.1",
+    "@lexical/html": "^0.17.1",
+    "@lexical/list": "^0.17.1",
     "@lexical/markdown": "^0.17.0",
     "@lexical/react": "^0.17.0",
     "@lexical/rich-text": "^0.17.0",
     "@lexical/utils": "^0.17.0",
     "jest-environment-jsdom": "^30.0.5",
-    "lexical": "^0.17.0"
+    "lexical": "^0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.22.0",
@@ -37,22 +37,26 @@
     "@storybook/react": "^8.0.0",
     "@storybook/react-vite": "^8.0.0",
     "@storybook/testing-library": "^0.2.0",
-    "@testing-library/jest-dom": "^6.0.0",
-    "@testing-library/react": "^16.0.0",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.0.0",
     "@types/node": "^24.3.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/testing-library__react": "^10.2.0",
     "babel-loader": "^9.1.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.0.0",
+    "jest": "^29.7.0",
     "rollup": "^4.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-typescript2": "^0.36.0",
     "storybook": "^8.0.0",
     "ts-jest": "^29.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.9.2",
+    "vite": "^7.1.3"
   },
   "peerDependencies": {
     "react": "^18.0.0",
