--- a/ts.config.json
+++ b/ts.config.json
@@ -9,7 +9,8 @@
       "forceConsistentCasingInFileNames": true,
       "declaration": true,
       "outDir": "dist",
-      "moduleResolution": "node"
+      "moduleResolution": "node",
+      "types": ["node", "jest", "@testing-library/jest-dom"]
     },
     "include": ["src"],
     "exclude": ["node_modules", "dist"]
